# cmagneto

./: .gitattributes  .gitignore  .gitlab-ci.yml  CMakeLists.txt  EnowSWContacts.code-workspace  README.md  ReadMe.md  TODO.md  build.py
SeedProject/: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  TODO.md  build.py
SeedProject/CI/Docker/: Dockerfile.Debian12AMD__build  Dockerfile.Debian12AMD__package_test  Dockerfile.Ubuntu24AMD__build  Dockerfile.Ubuntu24AMD__test_of_package  README.md  build_image.py
SeedProject/CI/GitLab/: README.md  job_templates.yml  pipeline.yml  workflow.yml
SeedProject/CI/GitLab/job_DAGs/: debian12amd.yml  ubuntu24amd.yml
SeedProject/CI/GitLab/platform_dependent_job_DAGs/: debian12amd.yml  ubuntu24amd.yml
SeedProject/CMagneto/: LICENSE  README.md  TODO.md
SeedProject/CMagneto/TODO/: Investigate Conan integration in CMagneto.md
SeedProject/CMagneto/cmake/: ApplicationMenu.cmake  CodeCoverage.cmake  Constants.cmake  GeneratorTools.cmake  GeneratorTools_Internals.cmake  LicenseManager.cmake  Logger.cmake  Logger_Internals.cmake  Main.cmake  MetaLoader.cmake  MetaLoader_Internals.cmake  Packager.cmake  PathTools.cmake  PathTools_Internals.cmake  Platform.cmake  Platform_Internals.cmake  Qt.cmake  Qt_Internals.cmake  SetUpExeTarget.cmake  SetUpExeTarget_Internals.cmake  SetUpFile.cmake  SetUpFile_Internals.cmake  SetUpLibTarget.cmake  SetUpLibTarget_Internals.cmake  SetUpProject.cmake  SetUpProject_Internals.cmake  SetUpTarget.cmake  SetUpTarget_Internals.cmake  TestTools.cmake  TestTools_Internals.cmake  ThirdPartySharedLibsTools.cmake  ThirdPartySharedLibsTools_Internals.cmake  ToolRegistry.cmake  generate_build_summary.cmake  generate_build_tests_summary.cmake
SeedProject/CMagneto/cmake/Packager/: CPackProjectConfig.cmake.in  InjectPortableMarker.cmake
SeedProject/CMagneto/cmake/ThirdPartySharedLibsTools/: Detection_Internals.cmake  HelperScripts_Internals.cmake  Manifest_Internals.cmake  Metadata_Internals.cmake  Policy_Internals.cmake  RuntimeDependencyOverrides_Internals.cmake  Runtime_Internals.cmake  SharedState_Internals.cmake  run__TEMPLATE_Unix.sh
SeedProject/CMagneto/cpp/: CMakeLists.txt
SeedProject/CMagneto/cpp/CMagneto/: CMakeLists.txt
SeedProject/CMagneto/cpp/sources/: CMakeLists.txt
SeedProject/CMagneto/cpp/tests/: CMakeLists.txt
SeedProject/CMagneto/doc/: CMakeKnowledge.md  CodeConventions.md  LicenseManagement.md  LinuxPackageVerification.md  SharedLibraryDeployment.md  Testing.md
SeedProject/CMagneto/py/: metadata_holder.py  utils.py
SeedProject/CMagneto/py/cmake/: build.py  build_platform.py  build_runner.py  build_runner_factory.py  build_runners_holder.py  build_variant.py  build_variant_registry.py  linux_package_verifier.py  toolset.py  toolset_registry.py
SeedProject/CMagneto/py/docker/: build_image.py  check_docker.py  image_build_runner.py
SeedProject/CMagneto/py/utils/: const_meta_class.py  good_path.py  log.py  process.py
SeedProject/build_variants/: __init__.py
SeedProject/build_variants/linux/: UnixMakefiles_GCC.md  UnixMakefiles_GCC.py
SeedProject/build_variants/linux/Makefiles_GCC/: Description.md
SeedProject/build_variants/linux/UnixMakefiles_GCC/: CMakePresets.json  Description.md  build_variant.py
SeedProject/build_variants/windows/: VS2022_MSVC.py  mingw.py
SeedProject/build_variants/windows/MinGW/: CMakePresets.json  Description.md  build_variant.py
SeedProject/build_variants/windows/NinjaMC_MSVC2022/: CMakePresets.json  Description.md  build_variant.py
SeedProject/build_variants/windows/VS2022_MSVC/: CMakePresets.json  Description.md  build_variant.py
SeedProject/doc/: CodeConventions.md
SeedProject/licenses/bundles/: default.json  linux-gcc.json  mingw-msys2-ucrt64.json  msvc2022.json
SeedProject/licenses/bundles/runtime/: default.json  linux-gcc.json  mingw-msys2-ucrt64.json  msvc2022.json
SeedProject/licenses/components/: cli11.json  cmagneto.json  qt6-base-linux-deb.json  qt6-base-msvc2022.json  qt6-base-msys2-ucrt64.json  seedproject.json  zlib-linux-deb.json  zlib-msvc2022.json  zlib-msys2-ucrt64.json
SeedProject/meta/: CI.json  Packaging.json  Project.json
SeedProject/packaging/: CPackConfig.cmake
SeedProject/packaging/@resources/: ApplicationMenu.json  Finished.txt  License.txt  Readme.txt  Welcome.txt
SeedProject/packaging/@resources/IFW/: Finished.html  Installer.json  Installer.qss  LicenseBundleWidget.ui  README.md
SeedProject/packaging/resources/: Description.txt  Readme.txt
SeedProject/packaging/resources/IFW/: PackageInstallerIcon.icns  README.md  Welcome.html
SeedProject/scripts/Linux/: install_cmake_into_opt.sh  switch_cmake_in_this_shell_instance.sh
SeedProject/scripts/Windows/: load_vcvars.ps1
SeedProject/src/DishSW/ContactHolder/: CMakeLists.txt  ContactHolder_DEFS.hpp
SeedProject/tests/: CMakeLists.txt
SeedProject/tests/@TestProjects/: README.md
SeedProject/tests/@TestProjects/CMakePackageConsumer/: CMakeLists.txt  CMakePresets.json  README.md
SeedProject/tests/DishSW/ContactHolder/: CMakeLists.txt
SeedProject/tests/native/: CMakeLists.txt
SeedProject/tests/system/: README.md  RUN_ALL.py  test__CMakePackageConsumer__build.py
SeedProject/toolsets/: __init__.py
SeedProject/toolsets/linux/: UnixMakefiles_GCC.md  UnixMakefiles_GCC.py
SeedProject/toolsets/windows/: MinGW.md  NinjaMC_MSVC.md  NinjaMC_MSVC.py  VS2022_MSVC.md  VS2022_MSVC.py  mingw.py  vs2022_msvc.py
src/Contacts/: CMakeLists.txt  Contacts.hpp  Contacts_Contact.cpp  Contacts_Contact.hpp  Contacts_FieldType.hpp  Contacts_FieldTypeExtension.cpp  Contacts_FieldTypeExtension.hpp
src/Enow/Contacts/Contacts/: CMakeLists.txt  Contact.cpp  Contact.hpp  Contacts.hpp  Field.cpp  Field.hpp  FieldType.hpp  (+2 more)
src/GUI/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  run_tests.py  run_unit_and_integration_tests.py
tests/Contacts/: CMakeLists.txt  TEST_Contacts_FieldTypeExtension.cpp
tests/py/: set_up__py_venv.py  set_up__venv.py
tests/testProjects/: .gitkeep
tests/testProjects/SeedProjectPackageConsumer/: CMakeLists.txt  README.md
(+395 files in other folders)
